--- a/InterpretBank/InterpretBank/TermbaseViewer/UI/TermbaseViewer.xaml
+++ b/InterpretBank/InterpretBank/TermbaseViewer/UI/TermbaseViewer.xaml
@@ -106,7 +106,6 @@
 														Value="Strikethrough" />
 											</DataTrigger>
 										</Style.Triggers>
-
 									</Style>
 								</TextBlock.Style>
 							</TextBlock>
@@ -130,7 +129,6 @@
 														Value="↶" />
 											</DataTrigger>
 										</Style.Triggers>
-
 									</Style>
 								</Button.Style>
 							</Button>
@@ -265,20 +263,22 @@
 					   Grid.ColumnSpan="2">
 
 				<Button Name="EditTerm_Button"
-				        ToolTip="Edit"
-				        Click="EditButton_Click"
-				        FontSize="13"
-				        DockPanel.Dock="Right"
-				        Margin="2 0 0 0"
-				        Content="📝" >
+						ToolTip="Edit"
+						Click="EditButton_Click"
+						FontSize="13"
+						DockPanel.Dock="Right"
+						Margin="2 0 0 0"
+						Content="📝">
 					<Button.Style>
-						<Style TargetType="Button" BasedOn="{StaticResource GlyphButtonStyle}">
+						<Style TargetType="Button"
+							   BasedOn="{StaticResource GlyphButtonStyle}">
 							<Setter Property="Visibility"
-									Value="{Binding Visibility, ElementName=ConfirmEdit_StackPanel, Converter={StaticResource InvertVisibilityConverter}}"/>
+									Value="{Binding Visibility, ElementName=ConfirmEdit_StackPanel, Converter={StaticResource InvertVisibilityConverter}}" />
 							<Style.Triggers>
 								<DataTrigger Binding="{Binding SelectedItem.IsRemoved}"
-								             Value="True">
-									<Setter Property="Visibility" Value="Collapsed"/>
+											 Value="True">
+									<Setter Property="Visibility"
+											Value="Collapsed" />
 								</DataTrigger>
 							</Style.Triggers>
 						</Style>
@@ -307,7 +307,6 @@
 									<Setter Property="Visibility"
 											Value="Visible" />
 								</MultiDataTrigger>
-
 							</Style.Triggers>
 						</Style>
 					</Button.Style>
