--- a/GoogleCloudTranslationProvider/Styles/WindowsBorder.xaml
+++ b/GoogleCloudTranslationProvider/Styles/WindowsBorder.xaml
@@ -13,7 +13,7 @@
 				<Setter Property="BorderThickness" Value="5"/>
 			</DataTrigger>
 			<DataTrigger Binding="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Window}}, Path=IsActive}" Value="False">
-				<Setter Property="BorderBrush" Value="{DynamicResource WindowsControl.Inactive.Border}" />
+				<Setter Property="BorderBrush" Value="Transparent" />
 			</DataTrigger>
 		</Style.Triggers>
 	</Style>
