--- a/LanguageWeaverProvider/View/Cloud/CloudCredentialsView.xaml
+++ b/LanguageWeaverProvider/View/Cloud/CloudCredentialsView.xaml
@@ -87,7 +87,7 @@
 
 			<TextBox Grid.Row="0"
 					 Grid.Column="1"
-					 Text="{Binding UserId}"
+					 Text="{Binding UserId, UpdateSourceTrigger=PropertyChanged}"
 					 Style="{StaticResource WatermarkTextBox}"
 					 controls:TextBoxWatermarkHelper.WatermarkText="User ID"
 					 controls:TextBoxWatermarkHelper.ButtonCommand="{Binding ClearCommand}"
