--- a/DeepLMTProvider/Sdl.Community.DeelLMTProvider/UI/DeepLWindow.xaml
+++ b/DeepLMTProvider/Sdl.Community.DeelLMTProvider/UI/DeepLWindow.xaml
@@ -3,20 +3,20 @@
 		xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
 		xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 		xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-		xmlns:wpf="clr-namespace:Sdl.Community.DeepLMTProvider"
 		xmlns:uiHelpers="clr-namespace:Sdl.Community.DeepLMTProvider.UI.UiHelpers"
 		xmlns:controls="clr-namespace:Sdl.Desktop.Platform.Controls.Controls;assembly=Sdl.Desktop.Platform.Controls"
 		xmlns:viewModel="clr-namespace:Sdl.Community.DeepLMTProvider.ViewModel"
+		xmlns:model="clr-namespace:Sdl.Community.DeepLMTProvider.Model"
 		mc:Ignorable="d"
 		d:DataContext="{d:DesignInstance Type=viewModel:DeepLWindowViewModel}"
 		Icon="../Resources/deepLIcon.ico"
 		WindowStyle="None"
+		MaxWidth="600"
+		MaxHeight="600"
 		AllowsTransparency="False"
-		ResizeMode="NoResize"
 		WindowStartupLocation="CenterScreen"
-		Title="DeepL Translation Provider"
-		Height="320"
-		Width="600">
+		Title="DeepL Translation Provider">
+
 	<Window.Resources>
 		<ResourceDictionary>
 			<ResourceDictionary.MergedDictionaries>
@@ -24,127 +24,202 @@
 				<ResourceDictionary Source="UiHelpers/TextBoxStyle.xaml" />
 				<ResourceDictionary Source="UiHelpers/WindowsBorder.xaml" />
 				<ResourceDictionary Source="/Sdl.Desktop.Platform.Styles;component/Checkboxresources.xaml" />
+				<ResourceDictionary Source="/Sdl.Desktop.Platform.Styles;component/datagridresources.xaml" />
 				<ResourceDictionary Source="/Sdl.Desktop.Platform.Styles;component/BindablePasswordBoxStyle.xaml" />
 				<ResourceDictionary Source="/Sdl.Desktop.Platform.Styles;component/TextBlockResources.xaml" />
 				<ResourceDictionary Source="/Sdl.Desktop.Platform.Styles;component/buttonresources.xaml" />
 			</ResourceDictionary.MergedDictionaries>
 		</ResourceDictionary>
 	</Window.Resources>
-	<Border Style="{DynamicResource WindowControlBorderStyle}">
-		<DockPanel>
-			<uiHelpers:WindowsControl  DockPanel.Dock="Top" />
-			<TextBlock Style="{DynamicResource Sdl.TextBlock.TitleStyle}"
-					   DockPanel.Dock="Top"
-					   Margin="10,5,0,0"
+
+	<Grid>
+		<Grid.RowDefinitions>
+			<RowDefinition Height="Auto" />
+			<RowDefinition Height="Auto" />
+			<RowDefinition Height="Auto" />
+			<RowDefinition Height="*" />
+			<RowDefinition Height="Auto" />
+		</Grid.RowDefinitions>
+
+		<uiHelpers:WindowsControl  DockPanel.Dock="Top"
+								   Grid.Row="0" />
+		<TextBlock Style="{DynamicResource Sdl.TextBlock.TitleStyle}"
+				   Grid.Row="1"
+				   DockPanel.Dock="Top"
+				   Margin="10,5,0,0"
+				   VerticalAlignment="Center"
+				   Text="Welcome to the DeepL Translation Provider. Please add your account and provider settings."
+				   FontSize="15" />
+		<StackPanel DockPanel.Dock="Top"
+					Grid.Row="2">
+			<TextBlock Margin="10,10,10,5"
+					   TextWrapping="WrapWithOverflow"
+					   FontSize="12"
+					   Text="The DeepL API is a paid machine translation service. Please purchase a DeepL Pro Subscription in order to get an API Key and use this service." />
+			<TextBlock Text="Please enter your API Key below:"
+					   Margin="10,0,10,10"
+					   FontSize="12" />
+			<controls:BindablePasswordBox Name="ApiKeyBox"
+										  Password="{Binding ApiKey, Mode=TwoWay}"
+										  IsEnabled="{Binding ApiKeyBoxEnabled}"
+										  Margin="10,0,20,5"
+										  Style="{StaticResource Sdl.BindablePasswordBox.GenericStyle}" />
+			<TextBlock Name="ApiKeyValidationBlock"
 					   VerticalAlignment="Center"
-					   Text="Welcome to the DeepL Translation Provider. Please add your account and provider settings."
-					   FontSize="15" />
-			<StackPanel>
-				<TextBlock Margin="10,10,10,5"
-						   TextWrapping="WrapWithOverflow"
-						   FontSize="12"
-						   Text="The DeepL API is a paid machine translation service. Please purchase a DeepL Pro Subscription in order to get an API Key and use this service." />
-				<TextBlock Text="Please enter your API Key below:"
-						   Margin="10,0,10,10"
-						   FontSize="12" />
-				<controls:BindablePasswordBox Name="ApiKeyBox"
-											  Password="{Binding ApiKey, Mode=TwoWay}"
-											  IsEnabled="{Binding ApiKeyBoxEnabled}"
-											  Margin="10,0,20,5"
-											  Style="{StaticResource Sdl.BindablePasswordBox.GenericStyle}" />
-				<TextBlock Name="ApiKeyValidationBlock"
-						   VerticalAlignment="Center"
-						   Margin="10,0,0,0"
-						   Text="{Binding ApiKeyValidationMessage, Mode=TwoWay}">
-					<TextBlock.Style>
-						<Style TargetType="TextBlock"
-							   BasedOn="{StaticResource Sdl.TextBlock.ErrorTitleStyle}">
-							<Setter Property="Visibility" Value="Visible"/>
-							<Style.Triggers>
-								<Trigger Property="Text" Value="{x:Null}">
-									<Setter Property="Visibility" Value="Collapsed"/>
-								</Trigger>
-							</Style.Triggers>
-						</Style>
-					</TextBlock.Style>
-				</TextBlock>
-				<TextBlock Margin="10,0,0,5"
-						   FontSize="12"> This API Key will then be used in all projects where you will be using the DeepL Pro Translation plug-in.</TextBlock>
-				<TextBlock Margin="10,0,0,10"
-						   Style="{StaticResource Sdl.TextBlock.HyperLinkTextStyle}">
+					   Margin="10,0,0,0"
+					   Text="{Binding ApiKeyValidationMessage, Mode=TwoWay}">
+				<TextBlock.Style>
+					<Style TargetType="TextBlock"
+						   BasedOn="{StaticResource Sdl.TextBlock.ErrorTitleStyle}">
+						<Setter Property="Visibility"
+								Value="Visible" />
+						<Style.Triggers>
+							<Trigger Property="Text"
+									 Value="{x:Null}">
+								<Setter Property="Visibility"
+										Value="Collapsed" />
+							</Trigger>
+						</Style.Triggers>
+					</Style>
+				</TextBlock.Style>
+			</TextBlock>
+			<TextBlock Margin="10,0,0,5"
+					   FontSize="12"> This API Key will then be used in all projects where you will be using the DeepL Pro Translation plug-in.</TextBlock>
+			<TextBlock Margin="10,0,0,10"
+					   Style="{StaticResource Sdl.TextBlock.HyperLinkTextStyle}">
 					<Hyperlink NavigateUri="https://www.deepl.com/api-contact.html"
 							   RequestNavigate="Hyperlink_OnRequestNavigate">
 						Click here to obtain your API Key from DeepL
 					</Hyperlink>
-				</TextBlock>
-				<TextBlock Style="{DynamicResource Sdl.TextBlock.InformationTitleStyle}"
-						   Text="Translation options"
-						   Margin="10 0 0 5" />
-				<StackPanel>
-					<CheckBox Style="{StaticResource Sdl.Checkbox.GenericStyle}"
-							  VerticalContentAlignment="Center"
-							  Name="PlainText"
-							  IsChecked="{Binding SendPlainText}"
-							  Content="Translate as plain text"
-							  Margin="10,0,0,5" />
-					<StackPanel Name="NotCompatibleStackPanel"
-								Orientation="Horizontal"
-								ToolTip="{x:Static wpf:PluginResources.FormalityNotAvailableReason}">
-						<TextBlock Name="FormalityLabel"
-								   Text="Formality: "
-								   Margin="10 0 0 0"
-								   VerticalAlignment="Center" />
-						<ComboBox Name="Formality"
-								  Margin="5,0,0,0"
-								  SelectedIndex="{Binding FormalitySelectedIndex, Mode=TwoWay}"
-								  Foreground="#0C2D47"
-								  Width="100"
-								  HorizontalAlignment="Left">
-							<ComboBoxItem Content="Default" />
-							<ComboBoxItem Content="Less formal"
-										  ToolTip="- for a more informal language" />
-							<ComboBoxItem Content="More formal"
-										  ToolTip="- for a more formal language" />
-						</ComboBox>
-						<TextBlock Name="NotCompatibleBlock"
-								   Margin="10 0 0 0"
-								   VerticalAlignment="Center"
-								   TextAlignment="Center"
-								   TextWrapping="Wrap"
-								   FontSize="12">
-							<TextBlock.Style>
-								<Style TargetType="TextBlock"
-									   BasedOn="{StaticResource Sdl.TextBlock.ErrorTitleStyle}">
-									<Setter Property="Text"
-									        Value="{x:Static wpf:PluginResources.FormalityNotAvailableText}" />
-									<Setter Property="Visibility" Value="Collapsed"/>
-									<Style.Triggers>
-										<DataTrigger Binding="{Binding FormalityCompatible, Mode=TwoWay}" Value="False">
-											<Setter Property="Visibility" Value="Visible" />
-											<Setter Property="ToolTip" Value="Some languages are incompatible with this formality" />
-										</DataTrigger>
-									</Style.Triggers>
-								</Style>
-							</TextBlock.Style>
-						</TextBlock>
-					</StackPanel>
-				</StackPanel>
-				<DockPanel LastChildFill="False"
-						   Margin="0 5 0 0">
-					<Button Style="{StaticResource Sdl.Button.SecondaryStyle}"
-							IsCancel="True"
-							Content="Cancel"
-							DockPanel.Dock="Right"
-							Margin="10,0,5,0"
-							Cursor="Hand" />
-					<Button Style="{StaticResource Sdl.Button.PrimaryStyle}"
-							Content="OK"
-							Command="{Binding OkCommand}"
-							Click="Ok_Click"
-							DockPanel.Dock="Right"
-							Cursor="Hand" />
-				</DockPanel>
-			</StackPanel>
+			</TextBlock>
+			<TextBlock Style="{DynamicResource Sdl.TextBlock.InformationTitleStyle}"
+					   Text="Translation options"
+					   Margin="10 0 0 5" />
+
+			<CheckBox Style="{StaticResource Sdl.Checkbox.GenericStyle}"
+					  VerticalContentAlignment="Center"
+					  Name="PlainText"
+					  IsChecked="{Binding SendPlainText}"
+					  Content="Translate as plain text"
+					  Margin="10,0,0,5" />
+
+		</StackPanel>
+
+		<DataGrid ItemsSource="{Binding LanguagePairOptions, Mode=TwoWay}"
+				  CanUserAddRows="False"
+				  DockPanel.Dock="Top"
+				  Margin="10 10"
+				  Grid.Row="3"
+				  Style="{StaticResource Sdl.DataGrid.GenericStyle}"
+				  CanUserDeleteRows="False"
+				  AutoGenerateColumns="False">
+
+			<DataGrid.Columns>
+				<DataGridTemplateColumn Header="Language Pair"
+										IsReadOnly="True"
+										SortMemberPath="LanguagePair.TargetCultureName"
+										Width="*">
+
+					<DataGridTemplateColumn.CellTemplate>
+						<DataTemplate>
+							<TextBlock>
+								<TextBlock.Text>
+									<MultiBinding StringFormat=" {0} -> {1}">
+										<Binding Path="LanguagePair.SourceCultureName" />
+										<Binding Path="LanguagePair.TargetCultureName" />
+									</MultiBinding>
+								</TextBlock.Text>
+							</TextBlock>
+						</DataTemplate>
+					</DataGridTemplateColumn.CellTemplate>
+
+				</DataGridTemplateColumn>
+
+				<DataGridTemplateColumn Header="Formality"
+										SortMemberPath="Formality"
+										Width="*">
+
+					<DataGridTemplateColumn.CellTemplate>
+						<DataTemplate>
+
+							<ComboBox ItemsSource="{Binding Source={x:Static model:FormalityEnumHelper.Values}}"
+									  SelectedItem="{Binding Formality, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+									  DisplayMemberPath="."
+									  Cursor="Hand" />
+
+						</DataTemplate>
+					</DataGridTemplateColumn.CellTemplate>
+
+				</DataGridTemplateColumn>
+
+				<DataGridTemplateColumn Header="Glossary"
+										SortMemberPath="Glossary"
+										Width="*">
+
+					<DataGridTemplateColumn.CellTemplate>
+						<DataTemplate>
+							<Grid>
+								<ComboBox ItemsSource="{Binding Glossaries}"
+										  Cursor="Hand"
+										  HorizontalContentAlignment="Center"
+										  SelectedItem="{Binding SelectedGlossary}"
+										  DisplayMemberPath="Name" >
+									<ComboBox.Style>
+										<Style TargetType="ComboBox" BasedOn="{StaticResource {x:Type ComboBox}}">
+											<Setter Property="Visibility"
+											        Value="Visible" />
+											<Style.Triggers>
+												<DataTrigger Binding="{Binding Glossaries.Count}" Value="0">
+													<Setter Property="Visibility" Value="Collapsed"/>
+												</DataTrigger>
+											</Style.Triggers>
+										</Style>
+									</ComboBox.Style>
+								</ComboBox>
+								<TextBlock Text="No glossary available"
+								           HorizontalAlignment="Center">
+									<TextBlock.Style>
+										<Style TargetType="TextBlock"
+											   BasedOn="{StaticResource {x:Type TextBlock}}">
+											<Setter Property="Visibility"
+													Value="Collapsed" />
+											<Style.Triggers>
+												<DataTrigger Binding="{Binding Glossaries.Count}"
+															 Value="0">
+													<Setter Property="Visibility"
+															Value="Visible" />
+												</DataTrigger>
+											</Style.Triggers>
+										</Style>
+									</TextBlock.Style>
+								</TextBlock>
+							</Grid>
+						</DataTemplate>
+					</DataGridTemplateColumn.CellTemplate>
+
+				</DataGridTemplateColumn>
+
+			</DataGrid.Columns>
+
+		</DataGrid>
+
+		<DockPanel LastChildFill="False"
+				   Grid.Row="4"
+				   DockPanel.Dock="Bottom"
+				   Margin="0 5 0 5">
+			<Button Style="{StaticResource Sdl.Button.SecondaryStyle}"
+					IsCancel="True"
+					Content="Cancel"
+					DockPanel.Dock="Right"
+					Margin="10,0,5,0"
+					Cursor="Hand" />
+			<Button Style="{StaticResource Sdl.Button.PrimaryStyle}"
+					Content="OK"
+					Command="{Binding OkCommand}"
+					Click="Ok_Click"
+					DockPanel.Dock="Right"
+					Cursor="Hand" />
 		</DockPanel>
-	</Border>
+
+	</Grid>
 </Window>
