--- a/LanguageWeaverProvider/Controls/WatermarkTextBoxResources.xaml
+++ b/LanguageWeaverProvider/Controls/WatermarkTextBoxResources.xaml
@@ -13,6 +13,8 @@
 				Value="12" />
 		<Setter Property="Cursor"
 				Value="Hand" />
+		<Setter Property="Margin"
+				Value="4 0" />
 		<Setter x:Uid="Setter_3"
 				Property="BorderThickness"
 				Value="0" />
@@ -61,9 +63,10 @@
 				<ControlTemplate x:Uid="ControlTemplate_2"
 								 TargetType="TextBox">
 					<Border x:Uid="Border_2"
-							BorderThickness="1"
+							BorderThickness="1.5"
 							BorderBrush="{TemplateBinding BorderBrush}"
 							Background="{TemplateBinding Background}"
+							CornerRadius="4"
 							Padding="3"
 							SnapsToDevicePixels="True">
 						<DockPanel x:Uid="DockPanel_1">
