--- a/LanguageWeaverProvider/View/Cloud/CloudCredentialsView.xaml
+++ b/LanguageWeaverProvider/View/Cloud/CloudCredentialsView.xaml
@@ -33,7 +33,7 @@
 	<Grid>
 		<Grid.RowDefinitions>
 			<RowDefinition Height="*" />
-			<RowDefinition Height="*" />
+			<RowDefinition Height="Auto" />
 			<RowDefinition Height="*" />
 			<RowDefinition Height="*" />
 		</Grid.RowDefinitions>
@@ -46,6 +46,30 @@
 		<StackPanel Grid.Row="0"
 					Grid.ColumnSpan="2"
 					Visibility="{Binding IsAuthenticationTypeSelected, Converter={StaticResource InvertableBooleanToVisibilityConverter}, ConverterParameter=Inverted}">
+			<Button Style="{StaticResource Sdl.Button.PrimaryStyle}"
+					Command="{Binding SelectAuthenticationTypeCommand}"
+					CommandParameter="{x:Static root:AuthenticationType.CloudCredentials}"
+					IsEnabled="False"
+					Cursor="Hand"
+					Width="188"
+					Margin="0 0 0 8">
+				<Button.Content>
+					<StackPanel Orientation="Horizontal">
+						<TextBlock Text="•"
+								   Foreground="#3dfc03"/>
+						<TextBlock Text="Continue as -username-" 
+								   Margin="4 0 0 0"/>
+					</StackPanel>
+				</Button.Content>
+			</Button>
+			<Button Content="Single sign-on"
+					Style="{StaticResource Sdl.Button.PrimaryStyle}"
+					Command="{Binding SelectAuthenticationTypeCommand}"
+					CommandParameter="{x:Static root:AuthenticationType.CloudCredentials}"
+					IsEnabled="False"
+					Cursor="Hand"
+					Width="188"
+					Margin="0 8" />
 			<Button Content="User credentials"
 					Style="{StaticResource Sdl.Button.PrimaryStyle}"
 					Command="{Binding SelectAuthenticationTypeCommand}"
@@ -75,7 +99,7 @@
 
 			<Grid.ColumnDefinitions>
 				<ColumnDefinition Width="*" />
-				<ColumnDefinition Width="6*" />
+				<ColumnDefinition Width="5*" />
 			</Grid.ColumnDefinitions>
 
 			<!-- User ID -->
@@ -83,28 +107,24 @@
 					   Grid.Column="0"
 					   Text="User ID"
 					   Style="{StaticResource Sdl.TextBlock.GenericTextStyle}"
-					   Visibility="{Binding IsCredentialsSelected, Converter={StaticResource InvertableBooleanToVisibilityConverter}}" />
+					   Visibility="{Binding IsCredentialsSelected, Converter={StaticResource InvertableBooleanToVisibilityConverter}}"
+					   VerticalAlignment="Center" />
 
 			<TextBox Grid.Row="0"
-					 Grid.Column="1"
+					 Grid.ColumnSpan="2"
 					 Text="{Binding UserId, UpdateSourceTrigger=PropertyChanged}"
 					 Style="{StaticResource WatermarkTextBox}"
 					 controls:TextBoxWatermarkHelper.WatermarkText="User ID"
 					 controls:TextBoxWatermarkHelper.ButtonCommand="{Binding ClearCommand}"
 					 controls:TextBoxWatermarkHelper.ButtonCommandParameter="UserID"
 					 controls:TextBoxWatermarkHelper.IsWatermarkVisible="True"
-					 Visibility="{Binding IsCredentialsSelected, Converter={StaticResource InvertableBooleanToVisibilityConverter}}" />
+					 Visibility="{Binding IsCredentialsSelected, Converter={StaticResource InvertableBooleanToVisibilityConverter}}" 
+					 Margin="0 8"/>
 			<!-- User ID -->
 
 			<!-- Password -->
-			<TextBlock Grid.Row="1"
-					   Grid.Column="0"
-					   Text="Password"
-					   Style="{StaticResource Sdl.TextBlock.GenericTextStyle}"
-					   Visibility="{Binding IsCredentialsSelected, Converter={StaticResource InvertableBooleanToVisibilityConverter}}" />
-
 			<PasswordBox Grid.Row="1"
-						 Grid.Column="1"
+						 Grid.ColumnSpan="2"
 						 PasswordChanged="UserPassword_Changed"
 						 Style="{StaticResource WatermarkPasswordBox}"
 						 controls:PasswordBoxWatermarkHelper.WatermarkText="Password"
@@ -112,44 +132,26 @@
 			<!-- Password -->
 
 			<!-- Client ID -->
-			<TextBlock Grid.Row="2"
-					   Grid.Column="0"
-					   Text="Client ID"
-					   Style="{StaticResource Sdl.TextBlock.GenericTextStyle}"
-					   Visibility="{Binding IsSecretSelected, Converter={StaticResource InvertableBooleanToVisibilityConverter}}" />
 			<PasswordBox Grid.Row="2"
-						 Grid.Column="1"
+						 Grid.ColumnSpan="2"
 						 PasswordChanged="ClientID_Changed"
 						 Style="{StaticResource WatermarkPasswordBox}"
 						 controls:PasswordBoxWatermarkHelper.WatermarkText="Client ID"
-						 Visibility="{Binding IsSecretSelected, Converter={StaticResource InvertableBooleanToVisibilityConverter}}" />
+						 Visibility="{Binding IsSecretSelected, Converter={StaticResource InvertableBooleanToVisibilityConverter}}" 
+						 Margin="0 8"/>
 			<!-- Client ID -->
 
 			<!-- Client Secret -->
-			<TextBlock Grid.Row="3"
-					   Grid.Column="0"
-					   Text="Client Secret"
-					   Style="{StaticResource Sdl.TextBlock.GenericTextStyle}"
-					   Visibility="{Binding IsSecretSelected, Converter={StaticResource InvertableBooleanToVisibilityConverter}}" />
+
 
 			<PasswordBox Grid.Row="3"
-						 Grid.Column="1"
+						 Grid.ColumnSpan="2"
 						 PasswordChanged="ClientSecret_Changed"
 						 Style="{StaticResource WatermarkPasswordBox}"
 						 controls:PasswordBoxWatermarkHelper.WatermarkText="Client Secret"
 						 Visibility="{Binding IsSecretSelected, Converter={StaticResource InvertableBooleanToVisibilityConverter}}" />
 			<!-- Client Secret -->
 		</Grid>
-
-		<Button Grid.Row="3"
-				Grid.ColumnSpan="2"
-				Content="Change authentication type"
-				Command="{Binding BackCommand}"
-				Style="{StaticResource Sdl.Button.SecondaryStyle}"
-				Visibility="{Binding IsAuthenticationTypeSelected, Converter={StaticResource InvertableBooleanToVisibilityConverter}}"
-				Cursor="Hand"
-				Width="188"
-				Margin="0 8 0 0" />
 
 		<Button Grid.Row="2"
 				Grid.ColumnSpan="2"
@@ -159,6 +161,16 @@
 				Visibility="{Binding IsAuthenticationTypeSelected, Converter={StaticResource InvertableBooleanToVisibilityConverter}}"
 				Cursor="Hand"
 				Width="188"
-				Margin="0 8 0 0" />
+				Margin="0 32 0 8" />
+
+		<Button Grid.Row="3"
+				Grid.ColumnSpan="2"
+				Content="Change authentication type"
+				Command="{Binding BackCommand}"
+				Style="{StaticResource Sdl.Button.SecondaryStyle}"
+				Visibility="{Binding IsAuthenticationTypeSelected, Converter={StaticResource InvertableBooleanToVisibilityConverter}}"
+				Cursor="Hand"
+				Width="188"
+				Margin="0 8 0 8" />
 	</Grid>
 </UserControl>
