--- a/LanguageWeaverProvider/View/CredentialsMainView.xaml
+++ b/LanguageWeaverProvider/View/CredentialsMainView.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="LanguageWeaverProvider.View.MainWindowView"
+﻿<Window x:Class="LanguageWeaverProvider.View.CredentialsMainView"
 		xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 		xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 		xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -12,14 +12,14 @@
 		xmlns:cloudViewModel="clr-namespace:LanguageWeaverProvider.ViewModel.Cloud"
 		xmlns:converters="clr-namespace:LanguageWeaverProvider.Converters"
 		mc:Ignorable="d"
-		d:DataContext="{d:DesignInstance local:MainViewModel}"
+		d:DataContext="{d:DesignInstance local:CredentialsMainViewModel}"
 		WindowStartupLocation="CenterScreen"
 		Title="Language Weaver Provider"
 		ResizeMode="CanResize"
 		WindowStyle="None"
-		Height="400"
+		Height="450"
 		Width="600"
-		d:DesignHeight="400"
+		d:DesignHeight="450"
 		d:DesignWidth="600">
 
 	<Window.Resources>
@@ -71,53 +71,9 @@
 
 					<TextBox Grid.Row="0"
 							 Style="{StaticResource Sdl.TextBox.BorderlessReadOnlyStyle}"
-							 IsReadOnly="True"
-							 Text="Tap the button below to choose between Language Weaver, designed for general translation needs, and Language Weaver Edge, specialized for enhanced business translation." />
-
-					<StackPanel Grid.Row="1"
-								VerticalAlignment="Bottom">
-						<Button Content="Language Weaver"
-								Style="{StaticResource Sdl.Button.PrimaryStyle}"
-								Command="{Binding SelectLanguageWeaverServiceCommand}"
-								CommandParameter="Cloud"
-								Cursor="Hand"
-								Width="188"
-								Margin="0 8" />
-
-						<Button Content="Language Weaver Edge"
-								Style="{StaticResource Sdl.Button.PrimaryStyle}"
-								Command="{Binding SelectLanguageWeaverServiceCommand}"
-								CommandParameter="Edge"
-								Cursor="Hand"
-								Width="188"
-								Margin="0 8" />
-
-						<Button Content="Exit"
-								Command="{Binding CloseCommand}"
-								Style="{StaticResource Sdl.Button.SecondaryStyle}"
-								Cursor="Hand"
-								Width="188"
-								Margin="0 8" />
-					</StackPanel>
-				</Grid>
-			</GroupBox>
-
-			<GroupBox Grid.Row="1"
-					  Header="Language Weaver Providers"
-					  Visibility="{Binding IsServiceSelected, Converter={StaticResource InvertableBooleanToVisibilityConverter}, ConverterParameter=Inverted}"
-					  Style="{StaticResource DefaultGroupBox}"
-					  Margin="24 0 24 24"
-					  Padding="12 24 12 12">
-				<Grid>
-					<Grid.RowDefinitions>
-						<RowDefinition Height="Auto" />
-						<RowDefinition Height="*" />
-					</Grid.RowDefinitions>
-
-					<TextBox Grid.Row="0"
-							 Style="{StaticResource Sdl.TextBox.BorderlessReadOnlyStyle}"
 							 Cursor="Arrow"
-							 Text="Tap the button below to choose between Language Weaver, designed for general translation needs, and Language Weaver Edge, specialized for enhanced business translation." />
+							 Text="Tap the button below to choose between Language Weaver, designed for general translation needs, and Language Weaver Edge, specialized for enhanced business translation." 
+							 FontSize="13"/>
 
 					<StackPanel Grid.Row="1"
 								VerticalAlignment="Bottom">
@@ -157,28 +113,30 @@
 					<Grid.RowDefinitions>
 						<RowDefinition Height="*" />
 						<RowDefinition Height="Auto" />
-						<RowDefinition Height="*" />
 					</Grid.RowDefinitions>
 
 					<TextBox Grid.Row="0"
 							 Style="{StaticResource Sdl.TextBox.BorderlessReadOnlyStyle}"
 							 Cursor="Arrow"
-							 Text="Placeholder text" />
+							 Text="Placeholder text" 
+							 FontSize="13"/>
 
-					<ContentControl Content="{Binding ProviderView}"
-									Focusable="False"
-									Margin="0 8" 
-									Grid.Row="1"
-									VerticalAlignment="Bottom"/>
-					
-					<Button Content="Back"
-							Command="{Binding BackCommand}"
-							Style="{StaticResource Sdl.Button.SecondaryStyle}"
-							Cursor="Hand"
-							Width="188"
-							Grid.Row="2"
-							VerticalAlignment="Bottom"
-							Margin="0 8"/>
+					<StackPanel Grid.Row="1">
+						<ContentControl Content="{Binding ProviderView}"
+										Focusable="False"
+										Margin="0 8"
+										Grid.Row="1"
+										VerticalAlignment="Bottom" />
+
+						<Button Content="Back"
+								Command="{Binding BackCommand}"
+								Style="{StaticResource Sdl.Button.SecondaryStyle}"
+								Cursor="Hand"
+								Width="188"
+								Grid.Row="2"
+								VerticalAlignment="Bottom"
+								Margin="0 0 0 8" />
+					</StackPanel>
 				</Grid>
 			</GroupBox>
 		</Grid>
