--- a/DeepLMTProvider/Sdl.Community.DeelLMTProvider/UI/GlossariesWindow.xaml
+++ b/DeepLMTProvider/Sdl.Community.DeelLMTProvider/UI/GlossariesWindow.xaml
@@ -1,10 +1,10 @@
 ﻿<Window x:Class="Sdl.Community.DeepLMTProvider.UI.GlossariesWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:viewModel="clr-namespace:Sdl.Community.DeepLMTProvider.ViewModel"
         xmlns:uiHelpers="clr-namespace:Sdl.Community.DeepLMTProvider.UI.UiHelpers"
+        xmlns:viewModel="clr-namespace:Sdl.Community.DeepLMTProvider.ViewModel"
         mc:Ignorable="d"
         d:DataContext="{d:DesignInstance Type=viewModel:GlossariesWindowViewModel}"
         d:DesignHeight="450"
@@ -19,9 +19,11 @@
                 <ResourceDictionary Source="UiHelpers/TextBlockStyle.xaml" />
                 <ResourceDictionary Source="UiHelpers/TextBoxStyle.xaml" />
                 <ResourceDictionary Source="UiHelpers/WindowsBorder.xaml" />
+                <ResourceDictionary Source="UiHelpers/General.xaml" />
                 <ResourceDictionary Source="/Sdl.Desktop.Platform.Styles;component/buttonresources.xaml" />
                 <ResourceDictionary Source="/Sdl.Desktop.Platform.Styles;component/datagridresources.xaml" />
             </ResourceDictionary.MergedDictionaries>
+            <BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter" />
         </ResourceDictionary>
     </Window.Resources>
     <Grid>
@@ -41,11 +43,22 @@
                Width="30" />
 
         <DataGrid Grid.Row="1"
-                  Style="{StaticResource Sdl.DataGrid.GenericStyle}"
                   AutoGenerateColumns="False"
                   Margin="5"
                   ItemsSource="{Binding Glossaries, Mode=TwoWay}"
                   d:ItemsSource="{d:SampleData}">
+            <DataGrid.Style>
+                <Style TargetType="DataGrid"
+                       BasedOn="{StaticResource Sdl.DataGrid.GenericStyle}">
+                    <Style.Triggers>
+                        <DataTrigger Binding="{Binding IsLoading}"
+                                     Value="True">
+                            <Setter Property="IsEnabled"
+                                    Value="False" />
+                        </DataTrigger>
+                    </Style.Triggers>
+                </Style>
+            </DataGrid.Style>
 
             <DataGrid.Resources>
                 <DataTemplate x:Key="CheckAllHeaderTemplate">
@@ -53,7 +66,6 @@
                               IsChecked="{Binding DataContext.IsCheckAll, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, RelativeSource={RelativeSource AncestorType=Window}}"
                               VerticalAlignment="Center" />
                 </DataTemplate>
-
             </DataGrid.Resources>
             <DataGrid.Columns>
 
@@ -95,26 +107,86 @@
                         </DataTemplate>
                     </DataGridTemplateColumn.CellTemplate>
                 </DataGridTemplateColumn>
-
             </DataGrid.Columns>
         </DataGrid>
         <StackPanel Grid.Row="2"
-                    HorizontalAlignment="Right"
-                    Margin="0 0 0 5"
+                    HorizontalAlignment="Left"
+                    Margin="5 0 0 5"
                     Orientation="Horizontal">
-            <Button Content="Import glossary"
+
+            <Button Content="📂"
                     Margin="0 0 5 0"
-                    Height="20"
+                    FontSize="18"
+                    ToolTip="Import glossaries"
                     Command="{Binding ImportGlossaryCommand}"
                     HorizontalAlignment="Center"
                     Style="{StaticResource Sdl.Button.EmbeddedStyle}" />
-            <Button Content="Ok"
+
+            <Button Margin="0 0 5 0"
+                    Height="25"
+                    Command="{Binding ExportGlossariesCommand}"
+                    ToolTip="Export selected glossaries"
+                    HorizontalAlignment="Center"
+                    Style="{StaticResource Sdl.Button.EmbeddedStyle}">
+                <Path Data="F1 M512,512z M0,0z M421.24,269.93L451.24,269.93 451.24,429.84A48.72,48.72,0,0,1,402.58,478.5L82.77,478.5A48.72,48.72,0,0,1,34.11,429.84L34.11,110A48.72,48.72,0,0,1,82.77,61.37L242.68,61.37 242.68,91.37 82.77,91.37A18.68,18.68,0,0,0,64.11,110L64.11,429.84A18.68,18.68,0,0,0,82.77,448.5L402.58,448.5A18.68,18.68,0,0,0,421.24,429.84z M352.24,33.5L352.24,63.5 426.64,63.5 249.5,240.68 270.71,261.89 447.89,84.71 447.89,159.11 477.89,159.11 477.89,33.5z"
+                      Height="18"
+                      Stretch="Uniform"
+                      StrokeThickness="0.1">
+                    <Path.Style>
+                        <Style TargetType="Path">
+                            <Setter Property="Fill"
+                                    Value="Black" />
+                            <Setter Property="Stroke"
+                                    Value="Black" />
+                            <Style.Triggers>
+                                <DataTrigger Binding="{Binding IsMouseOver, RelativeSource={RelativeSource AncestorType=Button}}" Value="True">
+                                    <Setter Property="Fill"
+                                            Value="Red" />
+                                    <Setter Property="Stroke"
+                                            Value="Red" />
+                                </DataTrigger>
+                            </Style.Triggers>
+                        </Style>
+                    </Path.Style>
+                </Path>
+            </Button>
+
+            <Button Content="🗑️"
                     Margin="0 0 5 0"
+                    Command="{Binding DeleteGlossariesCommand}"
+                    ToolTip="Delete selected glossaries"
+                    FontSize="16"
+                    HorizontalAlignment="Center"
+                    Style="{StaticResource Sdl.Button.EmbeddedStyle}" />
+        </StackPanel>
+
+        <StackPanel Grid.Row="2"
+                    Orientation="Horizontal"
+                    HorizontalAlignment="Right">
+
+            <StackPanel Orientation="Horizontal"
+                        Margin="0 0 5 0"
+                        Visibility="{Binding IsLoading, Converter={StaticResource BooleanToVisibilityConverter}}">
+                <Button Content="🚫"
+                        Command="{Binding CancelCommand}"
+                        Foreground="Red"
+                        ToolTip="Cancel operation"
+                        Style="{StaticResource Sdl.Button.EmbeddedStyle}" />
+                <ProgressBar HorizontalAlignment="Center"
+                             VerticalContentAlignment="Center"
+                             IsIndeterminate="True"
+                             Foreground="Teal"
+                             Height="10"
+                             Width="30" />
+            </StackPanel>
+
+            <Button Content="Ok"
+                    HorizontalAlignment="Right"
+                    Margin="0 0 5 5"
                     Click="OkButton_Click"
                     Style="{StaticResource Sdl.Button.PrimaryStyle}"
                     Height="25"
                     IsDefault="True" />
         </StackPanel>
-
     </Grid>
 </Window>
